--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,9 @@ footer {
 
 header {
   padding: 30px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
@@ -31,6 +34,8 @@ h2 {
   font-size: 22px;
   font-family: "Akshar", sans-serif;
   font-weight: 400;
+  border-bottom: 1px solid white;
+  width: 300px;
 }
 
 .container {
@@ -39,6 +44,41 @@ h2 {
   padding: 30px 50px 50px 50px;
   border-radius: 20px;
   max-width: 600px;
+  box-shadow: inset 0 0 10px black;
+}
+
+.score-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.score-title {
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.larger-text {
+  margin-bottom: 20px;
+  font-weight: 600;
+  font-size: 38px;
+}
+
+button {
+  font-size: 18px;
+  border-radius: 9px;
+  padding: 10px 20px;
+  font-weight: 700;
+  background-color: rgb(232, 228, 228);
+  box-shadow: 2px 2px 2px rgb(178, 178, 178);
+  display: none;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: white;
 }
 
 .scoreboard {
@@ -49,12 +89,6 @@ h2 {
   margin-bottom: 50px;
 }
 
-.score-title {
-  text-align: center;
-  margin-bottom: 50px;
-  font-size: 25px;
-}
-
 .buttons {
   display: flex;
   align-items: center;
@@ -62,19 +96,36 @@ h2 {
   flex-wrap: wrap;
 }
 
-img {
+.buttons img {
   height: 160px;
 }
 
-img:hover {
+.buttons img:hover {
   cursor: pointer;
   transform: translateY(-5px);
 }
 
-img:active {
+.buttons img:active,
+button:active {
   opacity: 0.5;
 }
 
 footer {
   padding-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+footer p {
+  margin-right: 6px;
+}
+
+a img {
+  max-height: 20px;
+  max-width: 20px;
+  padding-top: 15px;
+}
+
+a {
+  display: block;
 }
